--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,23 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/2ec2a30cc1.js" crossorigin="anonymous" </script>
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class='bg-light'>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-lg-8 offset-md1 offset-lg-2">
+          <p id="notice"><%= notice %></p>  
+          <div class="card mt-5">
+            <%= yield %>
+          </div>
+        </div>  
+      </div>
+    </div>
   </body>
 </html>
