--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -1,25 +1,61 @@
 <div class="card-header d-flex justify-content-between">
   <div>
-    <h5 class='m-0'><b><%= @todo_list.title %></b></h5>
-    <p class='text-secondary m0'><small>100% Complete(12/12 Todo Items)</small></p>
+    <h5 class='m-0'>
+      <b><%= @todo_list.title %></b>
+      <span class="badge badge-<%= @todo_list.badge_color %>"><%= @todo_list.status %></span>
+    </h5>
+    <p class='text-secondary m-0'><small> <%= @todo_list.percent_complete %>% Complete( <%= 
+    @todo_list.completed_items %>/<%=@todo_list.total_items %> Todo Items)</small></p>
   </div>
+  
   <div>
     <%= link_to 'Edit', edit_todo_list_path(@todo_list), class: 'btn btn-secondary btn-sm' %>
   </div>
+
 </div>
 
-<ul class="list-group">
-  <% @todo_list.todo_items.each do |todo_item| %>
-    <li class="list-group-item">
-      <div class="d-flex justify-content-between">
-        <span>
-          <%= todo_item.description %>
-        </span>
-        <%= link_to '#', class: 'btn btn-success' do %>
-          <i class='fas fa-check'></i>
-        <% end %>
-      </div>
 
-    </li>
+<div class="card-body">
+  
+  <div class="progress mb-4">
+    <div class="progress-bar bg-info" role="progressbar" style="width: <%= @todo_list.percent_complete %>%" aria-valuenow="<%= @todo_list.percent_complete %>" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+
+  <%= form_for([@todo_list, @todo_item]) do |f| %>
+    <div class="input-group mb-4">
+      <%= f.text_field :description, class: "form-control", placeholder: "Add a todo item" %>
+      <div class="input-group-append">
+        <%= f.submit "Add", class: "btn btn-primary input-group-btn" %>
+      </div>
+    </div>
   <% end %>
-</ul>
+
+  <ul class="list-group">
+    <% @todo_list.todo_items.each do |todo_item| %>
+      <% if todo_item.completed? %>
+        <li class="list-group-item" bg-light>
+          <div class="d-flex justify-content-between">
+            <span class="text-muted">
+              <em><%= todo_item.description %></em>
+            </span>
+            <%= link_to '#', class: 'btn btn-dark', data: { reflex: "click->TodoItem#mark_incomplete", id: todo_item.id } do %>
+              <i class='fas fa-times'></i>
+            <% end %>
+          </div>
+        </li>    
+      <% else %>
+        <li class="list-group-item">
+          <div class="d-flex justify-content-between">
+            <span>
+              <%= todo_item.description %>
+            </span>
+            <%= link_to '#', class: 'btn btn-info', data: { reflex: "click->TodoItem#mark_complete", id: todo_item.id }   do %>
+              <i class='fas fa-check'></i>
+            <% end %>
+          </div>
+        </li>
+      <% end %>
+    <% end %>
+  </ul>
+
+</div>
